--- a/src/components/AllRecipes/AllRecipes.css
+++ b/src/components/AllRecipes/AllRecipes.css
@@ -1,3 +1,9 @@
+.allRecipesTitle {
+    text-align: center;
+    font-size: 32px;
+}
+
+
 .allRecipesCards {
     width: 80vw;
     margin-left: auto;
@@ -11,18 +17,37 @@
 }
 
 .allRecipesCards li {
-    width: 25vw;
+    width: 20vw;
+    border: solid 2px rgb(77, 27, 27);
+    background-color: white;
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.20); 
+    border-radius: 10px;
+    margin-right: 5vw;
+    margin-bottom: 5vw;
+ 
 }
 
 .allRecipesCard {
     text-decoration: none;
+    color: rgb(77, 27, 27);
+    text-transform: capitalize;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .allRecipesCards ul {
     list-style-type: none;
 }
 
-.allRecipesCards img {
-    width: 10vw;
-    height: 10vw;
+.allRecipesCards #recipePic {
+    width: 15vw;
+    height: 15vw;
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.20); 
+}
+
+.allRecipesCards #recipePic:hover {
+    filter: brightness(110%);
 }
